--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "types": ["jest", "node"],
     "resolveJsonModule": true
   },
-  "include": ["src", "tests"]
+  "include": ["src", "tests", "main.ts"]
 }
